# sort_compare

./: CMakeLists.txt  README.md  drawing.cpp  drawing.h  log_duration.h  main.cpp  query_factory.cpp  query_factory.h  sort_algo.cpp  sort_algo.h  vector_processing.h
example/: example_table.csv
